src/styles/global.css
.gatsby-code-title {
  padding: 1.05rem 1.575rem 0.525rem;
  font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
    monospace;
  font-size: 14px;
  background-color: #e0e0e0;
  color: #333;
  margin-left: -1.575rem;
  margin-right: -1.575rem;
}

.gatsby-highlight {
  padding: 1.575rem;
  margin-bottom: 1.575rem;
  margin-left: -1.575rem;
  margin-right: -1.575rem;
  background: #2d2d2d;
  position: relative;
  overflow: auto;
}

.gatsby-highlight pre[class*='language-']::before {
  position: absolute;
  top: 0px;
  right: 20px;
  padding: 3px 10px;
  font-size: 12px;
  text-align: right;
  color: #333;
  font-weight: 700;
  letter-spacing: 0.8px;
  text-transform: uppercase;
  border-radius: 0 0 5px 5px;
  background: #ddd;
}

.gatsby-highlight pre[class*='language-'] {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  background-color: transparent;
  border: 0;
  float: left;
  min-width: 100%;
  overflow: initial;
}

.gatsby-highlight pre[class='language-javascript']::before {
  content: 'js';
  background: #f7df1e;
}

.gatsby-highlight pre[class='language-typescript']::before {
  content: 'ts';
  background: #006ec5;
  color: #fff;
}

.gatsby-highlight pre[class='language-shell']::before {
  content: 'shell';
  background: #f2f6f9;
}

.gatsby-highlight pre[class='language-json']::before {
  content: 'json';
  background: #f08d49;
  color: #333;
}

.gatsby-highlight pre[class='language-html']::before {
  content: 'html';
  background: #52dee5;
  color: #333;
}

:not(pre) > code[class*='language-'] {
  padding: 5px !important;
  background: #f2f6f9 !important;
  color: #333 !important;
}

.gatsby-highlight-code-line {
  background-color: #474747;
  display: block;
  margin-right: -1.575rem;
  margin-left: -1.575rem;
  padding-right: 1.575rem;
  padding-left: 1.26rem;
  border-left: 0.315rem solid #f7f7f7;
}

.gatsby-highlight pre[class='language-javascript'] .gatsby-highlight-code-line {
  border-color: #f7df1e;
}

.gatsby-highlight pre[class='language-typescript'] .gatsby-highlight-code-line {
  border-color: #006ec5;
}

.gatsby-highlight pre[class='language-shell'] .gatsby-highlight-code-line {
  border-color: #f2f6f9;
}

.gatsby-highlight pre[class='language-json'] .gatsby-highlight-code-line {
  border-color: #f08d49;
}

.pagination a {
  box-shadow: none;
}

